@@ -1,6 +1,7 @@
 /* Character set conversion support for GDB.
 
-   Copyright (C) 2001-2013 Free Software Foundation, Inc.
+   Copyright (C) 2001, 2003, 2007, 2008, 2009, 2010, 2011
+   Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -27,7 +28,6 @@
 #include "vec.h"
 #include "environ.h"
 #include "arch-utils.h"
-#include "gdb_vecs.h"
 
 #include <stddef.h>
 #include "gdb_string.h"
@@ -108,7 +108,7 @@
 #define EILSEQ ENOENT
 #endif
 
-static iconv_t
+iconv_t
 phony_iconv_open (const char *to, const char *from)
 {
   /* We allow conversions from UTF-32BE, wchar_t, and the host charset.
@@ -124,13 +124,13 @@ phony_iconv_open (const char *to, const char *from)
   return !strcmp (from, "UTF-32BE");
 }
 
-static int
+int
 phony_iconv_close (iconv_t arg)
 {
   return 0;
 }
 
-static size_t
+size_t
 phony_iconv (iconv_t utf_flag, const char **inbuf, size_t *inbytesleft,
 	     char **outbuf, size_t *outbytesleft)
 {
@@ -531,7 +531,7 @@ convert_between_encodings (const char *from, const char *to,
 		  {
 		    char octal[5];
 
-		    xsnprintf (octal, sizeof (octal), "\\%.3o", *inp & 0xff);
+		    sprintf (octal, "\\%.3o", *inp & 0xff);
 		    obstack_grow_str (output, octal);
 
 		    ++inp;
@@ -718,6 +718,8 @@ wchar_iterate (struct wchar_iterator *iter,
 
 extern initialize_file_ftype _initialize_charset; /* -Wmissing-prototype */
 
+DEF_VEC_P (char_ptr);
+
 static VEC (char_ptr) *charsets;
 
 #ifdef PHONY_ICONV
@@ -797,9 +799,7 @@ find_charset_names (void)
   char *args[3];
   int err, status;
   int fail = 1;
-  int flags;
   struct gdb_environ *iconv_env;
-  char *iconv_program;
 
   /* Older iconvs, e.g. 2.2.2, don't omit the intro text if stdout is
      not a tty.  We need to recognize it and ignore it.  This text is
@@ -811,26 +811,12 @@ find_charset_names (void)
 
   child = pex_init (PEX_USE_PIPES, "iconv", NULL);
 
-#ifdef ICONV_BIN
-  {
-    char *iconv_dir = relocate_gdb_directory (ICONV_BIN,
-					      ICONV_BIN_RELOCATABLE);
-    iconv_program = concat (iconv_dir, SLASH_STRING, "iconv", NULL);
-    xfree (iconv_dir);
-  }
-#else
-  iconv_program = xstrdup ("iconv");
-#endif
-  args[0] = iconv_program;
+  args[0] = "iconv";
   args[1] = "-l";
   args[2] = NULL;
-  flags = PEX_STDERR_TO_STDOUT;
-#ifndef ICONV_BIN
-  flags |= PEX_SEARCH;
-#endif
   /* Note that we simply ignore errors here.  */
-  if (!pex_run_in_environment (child, flags,
-			       args[0], args, environ_vector (iconv_env),
+  if (!pex_run_in_environment (child, PEX_SEARCH | PEX_STDERR_TO_STDOUT,
+			       "iconv", args, environ_vector (iconv_env),
 			       NULL, NULL, &err))
     {
       FILE *in = pex_read_output (child, 0);
@@ -839,7 +825,7 @@ find_charset_names (void)
 	 parse the glibc and libiconv formats; feel free to add others
 	 as needed.  */
 
-      while (in != NULL && !feof (in))
+      while (!feof (in))
 	{
 	  /* The size of buf is chosen arbitrarily.  */
 	  char buf[1024];
@@ -902,15 +888,17 @@ find_charset_names (void)
 
     }
 
-  xfree (iconv_program);
   pex_free (child);
   free_environ (iconv_env);
 
   if (fail)
     {
       /* Some error occurred, so drop the vector.  */
-      free_char_ptr_vec (charsets);
-      charsets = NULL;
+      int ix;
+      char *elt;
+      for (ix = 0; VEC_iterate (char_ptr, charsets, ix, elt); ++ix)
+	xfree (elt);
+      VEC_truncate (char_ptr, charsets, 0);
     }
   else
     VEC_safe_push (char_ptr, charsets, NULL);
@@ -965,6 +953,7 @@ intermediate_encoding (void)
   iconv_t desc;
   static const char *stored_result = NULL;
   char *result;
+  int i;
 
   if (stored_result)
     return stored_result;
